Tue Dec 18 10:17:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/Deployment/Deployment_Core.mpc:
          Removed commandline option we don't use anymore

        * dance/NodeApplication/NodeApplication_Impl.cpp:
          Layout change

Mon Nov 12 10:07:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Mon Nov 12 09:34:14 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.1.6 released.

Fri Oct 12 11:18:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/LocalityManager/Handler/Inst_Handler_Impl.cpp:
          Fixed incorrect else

        * dance/Plan_Launcher/EM_Launcher.cpp:
        * dance/Plan_Launcher/LM_Launcher.cpp:
        * dance/Plan_Launcher/NM_Launcher.cpp:
          Layout changes

Fri Oct 12 10:52:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for x.1.5

Fri Oct 12 11:20:25 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.1.5 released.

Tue Sep 25 18:36:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/LocalityManager/Handler/Config_Handler_Impl.h:
        * dance/LocalityManager/Handler/Inst_Handler_Impl.h:
        * dance/LocalityManager/Handler/Interceptor_Handler_Impl.h:
        * dance/LocalityManager/Handler/Locality_Manager_Handler_Impl.h:
          Only locality manager stubs are used here

Wed Aug 29 07:34:06 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * ChangeLogs/ChangeLog-2012a:
        * NEWS:
          Prepared for the next release

Wed Aug 29 08:16:04 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.1.4 released.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))